--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,4 +25,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/docker-cicd-delivery:latest
+          tags: ghcr.io/pontolocal/docker-cicd-delivery:latest
+          #tags: ghcr.io/${{ github.repository_owner }}/docker-cicd-delivery:latest
