--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Login no GHCR
+        run: echo ${{ secrets.GHCR_SECRET }} | docker login ghcr.io -u SEU_USUARIO --password-stdin
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
