--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Login no GHCR
-        run: echo ${{ secrets.GHCR_SECRET }} | docker login ghcr.io -u SEU_USUARIO --password-stdin
+        run: echo ${{ secrets.GHCR_SECRET }} | docker login ghcr.io -u edinhofjr --password-stdin
         
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
